--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.1",
     "http-errors": "^2.0.0",
+    "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.3.2",
     "nodemon": "^2.0.22",
     "xss-clean": "^0.1.4"
