--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.1",
     "http-errors": "^2.0.0",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.3.2",
+    "nodemailer": "^6.9.3",
     "nodemon": "^2.0.22",
     "xss-clean": "^0.1.4"
   },
